--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html>
+	<head>
+		<link rel="stylesheet" href="style.css">
+		</head>
 <div class="results">
 	<div id="cat_result" class="result">
 		<p>Random Cat Placeholder</p>
@@ -11,4 +15,6 @@
 	<button id="cat_btn">Get Cat</button>
 	<button id="dog_btn">Get Dog</button>
 </div>
+	 <script src="index.js"></script>
+	</html>
 
