--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </div>
 
 <div class="buttons">
-	<button id="cat_btn">Get Cat</button>
-	<button id="dog_btn">Get Dog</button>
+	<button id="cat_btn">Bilauwa ke frnds</button>
+	<button id="dog_btn">Bilauwa ke enemies</button>
 </div>
 	 <script src="index.js"></script>
 	</html>
